# roundabout

./: .gitignore  README.md  environment.yml  main.nf  nextflow.config  pyproject.toml
.github/workflows/: ci.yml  publish_pypi.yml  test_amrfinder.yml  test_bakta.yml  test_core_nodb.yml  test_plasmidfinder.yml  test_refseq.yml
conf/: template.conf  template_amr.conf
modules/: amrfinder.nf  bedtools.nf  blast.nf  circos.nf  plasmidfinder.nf  prokka.nf  pygenomeviz.nf  roundabout.nf
nextflow/: main.nf  nextflow.config
nextflow/conf/: roundabout.config
nextflow/modules/: amrfinder.nf  circos.nf  plasmidfinder.nf  roundabout.nf
roundabout/: __init__.py  cli.py  database.py  engine.py  run_annotation.py  run_cohort_heatmaps.py  run_daisyblast.py  run_extract_references.py  run_group_analysis.py  run_grouping.py  run_grouping_by_amr.py  run_grouping_by_pf.py  run_grouping_by_similarity.py  run_grouping_summary.py  run_heatcluster.py  run_minkemap.py  run_nucmer.py  run_parsing.py  run_pygenomeviz.py  run_pygenomeviz_gbk.py  run_similarity.py  run_visualize_similarity.py  wrappers.py
test/: example1.fa  example2.fa  example3.fa  test.fa  test.py  test_database.py  test_engine.py  test_grouping.py  test_pygenomeviz.py  test_similarity.py
