[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roundabout"
version = "0.7.26160"
authors = [
  { name="Erin Young", email="eriny@utah.gov" },
]
description = "A rapid pipeline for plasmid outbreak clustering and visualization."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# TODO: Add additonal pypi dependencies
dependencies = [
    "heatcluster",
    "minkemap",
    "daisyblast",
    "refseq-plasmid-dl",
    "pathofetch",
    "PlasmidFinder",
    "pygenomeviz",
    "bakta"
]

[project.scripts]
roundabout = "roundabout.cli:main"

[tool.setuptools.packages.find]
include = ["roundabout"]
exclude = ["assets", "test"]