[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roundabout"
version = "0.7.26160"
authors = [
  { name="Erin Young", email="eriny@utah.gov" },
]
description = "A pipeline for plasmid outbreak clustering and visualization."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pygenomeviz>=1.0.0",
    "bakta>=1.9.0",
    "heatcluster",
    "minkemap",
    "daisyblast",
    "refseq-plasmid-dl"
]

[project.scripts]
roundabout = "roundabout.cli:main"

[tool.setuptools.packages.find]
include = ["roundabout", "roundabout.*"]
exclude = ["assets*", "test*"]